# yew-app

./: .gitignore  Cargo.toml  README.md  bootstrap.js  index.js  package-lock.json  package.json  wasm_pack_cmd  webpack.config.js
app/: index.ts  main.scss  notif.scss
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: app.rs  console.rs  lib.rs  macros.rs  router.rs  routes.rs
src/components/: mod.rs  nav_item.rs  navbar.rs  notification.rs  router_link.rs  router_view.rs  sidebar.rs
src/components/forms/: button.rs  field.rs  form.rs  form_state.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/models/: mod.rs
src/routes/: mod.rs  router_agent.rs
src/service/: account.rs  api_client.rs  auth_service.rs  github_service.rs  mod.rs  storage.rs
src/utils/: bindings.rs  mod.rs  notif_agent.rs  route_parser.rs  router_agent.rs  token.rs
src/views/: about_view.rs  blog_view.rs  contact_view.rs  dashboard.rs  dashboard_main.rs  home_view.rs  login.rs  mod.rs  not_found.rs  project.rs  register.rs  task.rs  todo.rs
static/: index.html
