[package]
name = "yew-app"
version = "0.1.0"
authors = ["fatkhur1960 <fatkhuranonym@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
#yew = "0.17.4"
#yew-router = { version = "0.14", features = ["web_sys"]}
yew-router = { git = "https://github.com/yewstack/yew", branch="master" }
yew = { git = "https://github.com/yewstack/yew", branch = "master" }
wasm-bindgen = "0.2.67"

serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
regex = "1.4.3"

log = "0.4.14"
env_logger= "0.8.3"

proc_macros = { path = "./proc_macros" }