[package]
name = "yew-app"
version = "0.1.0"
authors = ["fatkhur1960 <fatkhuranonym@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew-router = { git = "https://github.com/yewstack/yew", branch="master" }
yew-router-route-parser = { git = "https://github.com/yewstack/yew", branch="master" }
yew-services = { git = "https://github.com/yewstack/yew", branch = "master" }
yewtil = { git = "https://github.com/yewstack/yew", branch="master", features = ["lrc"] }
yew = { git = "https://github.com/yewstack/yew", branch = "master" }

wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.3"

serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }

log = "0.4.14"
web_logger = "0.2.0"
lazy_static = "1.4.0"
load-dotenv = "0.1.2"

reqwest-wasm = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde","wasmbind"] }

proc_macros = { path = "./proc_macros" }

validator = { version = "0.12", features = ["derive"] }