[package]
name = "yew-app"
version = "0.1.0"
authors = ["fatkhur1960 <fatkhuranonym@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew-router = { git = "https://github.com/yewstack/yew", branch="master" }
yew-router-route-parser = { git = "https://github.com/yewstack/yew", branch="master" }
yew-services = { git = "https://github.com/yewstack/yew", branch = "master" }
yewtil = { git = "https://github.com/yewstack/yew", branch="master" }
yew = { git = "https://github.com/yewstack/yew", branch = "master" }

wasm-bindgen = "0.2.67"

[dependencies.serde_json]
version = "1.0"
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.validator]
version = "0.12"
default-features = false
features = ["derive"]

[dependencies.reqwest-wasm]
version = "0.11"
default-features = false
features = ["json"]

[dependencies.proc_macros]
path = "./proc_macros"
default-features = false

[dependencies.lazy_static]
version = "1.4.0"
default-features = false

[dependencies.queryst]
version = "2.1.0"
default-features = false

[dependencies.wee_alloc]
version = "0.4.4"
default-features = false

[profile.release]
opt-level = 'z'
